Made some progress

--- a/tuttleFrontEnd/src/app/routes/main/main.component.html
+++ b/tuttleFrontEnd/src/app/routes/main/main.component.html
@@ -1,3 +1,6 @@
-<p>
-  main works!
-</p>
+<div class="contentContainer">
+  <div class="mainContainer">
+    <app-card *ngFor="let card of cards;"></app-card>
+    <app-create-card></app-create-card>
+  </div>
+</div>
