--- a/tuttleFrontEnd/src/app/ui/card/card.component.html
+++ b/tuttleFrontEnd/src/app/ui/card/card.component.html
@@ -1,3 +1,22 @@
-<p>
-  card works!
-</p>
+<div class="cardContainer">
+  <img class="image" src="https://s3.envato.com/files/127629670/01_both.png" />
+  <div class="cardContent">
+    <div class="informationBox">
+      <p>title</p>
+      <p>description</p>
+    </div>
+    <div class="priceState">
+      <div>
+        <div class="cardPrice"></div>
+        <div class="cardState"></div>
+      </div>
+      <div class="progressBar">
+      </div>
+    </div>
+  </div>
+  <div class="cardFooter">
+    <div class="firstBox"></div>
+    <div class="secondBox"></div>
+    <div class="thirdBox"></div>
+  </div>
+</div>
