Got the card http request working and creating card objects with with real

--- a/tuttleFrontEnd/src/app/ui/card/card.component.html
+++ b/tuttleFrontEnd/src/app/ui/card/card.component.html
@@ -2,8 +2,8 @@
   <img class="image" src="https://s3.envato.com/files/127629670/01_both.png" />
   <div class="cardContent">
     <div class="informationBox">
-      <p>title</p>
-      <p>description</p>
+      <p>{{card.cardTitle}}</p>
+      <p>{{card.cardDescription}}}</p>
     </div>
     <div class="priceState">
       <div>
