--- a/tuttleFrontEnd/src/app/routes/main/main.component.html
+++ b/tuttleFrontEnd/src/app/routes/main/main.component.html
@@ -1,6 +1,9 @@
 <div class="contentContainer">
   <div class="mainContainer">
-    <app-card *ngFor="let card of cards;"></app-card>
+    <app-card
+      *ngFor="let card of cards;"
+      [card]="card"
+    ></app-card>
     <app-create-card></app-create-card>
   </div>
 </div>
