--- a/tuttleFrontEnd/src/app/routes/main/main.component.css
+++ b/tuttleFrontEnd/src/app/routes/main/main.component.css
@@ -1,6 +1,13 @@
 .mainContainer{
+  margin-top: 50px;
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+@media only screen and (max-width: 600px) {
+  .mainContainer {
+    display: block;
+  }
 }
