--- a/tuttleFrontEnd/src/app/ui/card/card.component.css
+++ b/tuttleFrontEnd/src/app/ui/card/card.component.css
@@ -2,9 +2,11 @@
   margin-left: 25px;
   margin-top: 15px;
   background-color: whitesmoke;
-  height: 415px;
+  height: auto;
+  padding-bottom: 25px;
   width: 270px;
   border-radius: 5px;
+  box-shadow: 1px 1px 1px 1px lightgray;
 }
 
 .image {
@@ -12,6 +14,57 @@
   height: 200px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  background-size: cover;
+  position: relative;
+
+}
+
+.progressBar{
+  margin: auto;
+  height: 10px;
+  width: 100%;
+  background-color: orange;
+}
+
+.cardButton{
+  position: absolute;
+  background-color: white;
+  color: orange;
+  border-radius: 2px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  right: 5px;
+  top: 5px;
+  width: 25px;
+  height: 25px;
+}
+
+
+.menuItem{
+  color: gray;
+  width: 100%;
+  padding: 10px;
+}
+
+.menuItemText{
+  margin-left: 20px;
+}
+
+hr{
+  margin: 0;
+  padding: 0;
+}
+
+.cardButtonDropdown{
+  box-shadow: 1px 1px 1px lightgray;
+  position:absolute;
+  right: 0px;
+  border-radius: 2px;
+  height: auto;
+  width: 135px;
+  background-color: whitesmoke;
 }
 
 .cardFooter{
@@ -19,8 +72,26 @@
 
 }
 
+.priceState{
+  position: relative;
+  margin: auto;
+  width: 90%;
+}
+
+
+.price{
+  display: inline;
+}
+
+.cardState{
+  position: absolute;
+  right: 0px;
+  display: inline;
+}
+
 .cardContent{
-  height: 165px;
+  height: auto;
+  padding-bottom: 20px;
   background-color: white;
   margin: auto;
   width: 98%;
