Made some progress on the card, got the dropdown looking ok.

--- a/tuttleFrontEnd/src/app/ui/create-card/create-card.component.css
+++ b/tuttleFrontEnd/src/app/ui/create-card/create-card.component.css
@@ -7,7 +7,8 @@
   border-color: lightgray;
   color: gray;
   text-align: center;
-  margin: 15px;
+  margin-left: 25px;
+  margin-top: 15px;
 
 }
 
