--- a/tuttleFrontEnd/src/app/ui/card/card.component.css
+++ b/tuttleFrontEnd/src/app/ui/card/card.component.css
@@ -48,13 +48,22 @@
   padding: 10px;
 }
 
+.menuItem:hover{
+  background-color: white;
+}
+
 .menuItemText{
   margin-left: 20px;
+  font-family: Helvetica Neue;
 }
 
 hr{
   margin: 0;
   padding: 0;
+}
+
+.editButton > .cardButtonDropdown {
+  display: none;
 }
 
 .cardButtonDropdown{
@@ -65,6 +74,14 @@ hr{
   height: auto;
   width: 135px;
   background-color: whitesmoke;
+}
+
+.editButton:hover{
+  cursor: pointer;
+}
+
+.editButton:hover > .cardButtonDropdown {
+  display: inline-block;
 }
 
 .cardFooter{
