--- a/tuttleFrontEnd/src/app/ui/card/card.component.html
+++ b/tuttleFrontEnd/src/app/ui/card/card.component.html
@@ -3,7 +3,7 @@
     class="image"
     [ngStyle]="{'backgroundImage': 'url('+card.primaryMediaUrl+')'}">
     <div class="cardButton">
-      <i class="fas fa-pencil-alt"></i>
+      <i class="fas fa-pencil-alt editButton">
       <div class="cardButtonDropdown">
         <div class="menuItem"><i class="fas fa-edit"></i><span class="menuItemText">Edit</span></div>
         <hr>
@@ -13,6 +13,7 @@
         <hr>
         <div class="menuItem"><i class="fas fa-trash-alt"></i><span class="menuItemText">Delete</span></div>
       </div>
+      </i>
     </div>
   </div>
   <div class="cardContent">
