--- a/tuttleFrontEnd/src/app/routes/main/main.component.css
+++ b/tuttleFrontEnd/src/app/routes/main/main.component.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-bottom: 50px;
 }
 
 @media only screen and (max-width: 600px) {
