--- a/tuttleFrontEnd/src/app/ui/header/header.component.css
+++ b/tuttleFrontEnd/src/app/ui/header/header.component.css
@@ -1,7 +1,7 @@
 button{
   margin-right: 10px;
-  color: darkgray;
-  font-weight: 100;
+  color: black;
+  font-weight: 400;
 }
 .headerContainer{
   background-color: #f5f6f7;
